# prime-derivative

./: .gitignore  Dockerfile  README.md  environment.yaml  pyproject.toml  start.sh
data/bitcoin/: btcusd_1-min_data.csv
data/fed/: H.15.Selected.Interest.Rates.csv
data/global_economy/: macro_economic_events.csv
data/wsj/: s_and_p_500_historical_prices.csv
docs/: Research.docx  ~$search.docx
notebooks/: EDA-3-22-2025.ipynb  EDA-4-2-2025.ipynb  EDA.ipynb  cpi_index_vs_federal_funds_rate.ipynb  output.html  predict_federal_reserve_interest_rates_notebook.ipynb
prime_derivative/util/: date.py  viz.py
tests/: test_date_util.py
