[tool.poetry]
name = "prime-derivative"
version = "0.1.0"
description = "Machine Learning algorithm to predict the bank prime rate"
authors = ["Larry Johnson <johnson.larry.l@gmail.com>"]

[tool.poetry.dependencies]
numpy = "^2.1.3"
pandas = "^2.2.3"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"